package communication;

import "physbam_vector_2d.proto";
import "physbam_range_2d.proto";

// initialize face arrays data (physbam) from values

message PhysbamFaceArray2d {
    optional int32 buffer_size = 1;
    optional PhysbamRangeInt2d domain_indices = 2;
    optional bool values_present = 3;
    repeated float values = 4;
}
